Fix Dark Mode

--- a/airquality/styles/airquality.css
+++ b/airquality/styles/airquality.css
@@ -2,7 +2,6 @@ body {
 	margin: 0;
 	padding: 0;
 	min-height: 100vh;
-	background-color: #f2f2f2;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -52,4 +51,3 @@ body {
 		width: 20vw;
 	}
 }
-
